# gorur.dev

./: .gitignore  Manifest.toml  Project.toml  _quarto.yml  counting-phone-calls.qmd  deps.edn  eslint.config.js  hello.py  index.qmd  math-intuition.qmd  metrics.csv  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  taste-of-autodiff.qmd  tsconfig.json
docs/: CNAME  cipher-exercise.html  counting-phone-calls.html  index.html  math-intuition.html  math-intuition.qmd  search.json  styles.css  taste-of-autodiff.html
docs/annotations/: biology-of-llm.html  biology-of-llm.qmd  deep-dive-into-llms.html  deep-dive-into-llms.qmd  history-of-language-models.html  programming-as-theory-building.html  why-machines-learn.html  why-machines-learn.qmd
docs/exercises/: stats110-practice1.html
docs/lib/: knn-chess.html
drafts/: cipher-exercise.qmd  everything-is-a-vector.qmd  everything-vector.md  math-intuition.qmd  scratch.jl  taste-of-autodiff.qmd
lib/: BytePairEncoding.jl  Perceptron.ipynb  cooking.jl  everything-vector.ipynb  ex-phone.jl  knn-wifi.jl  mandel.jl
src/: _quarto.yml  breaking-caesar-cipher.qmd  caesar.py  car-buying.qmd  chessrank.py  chessrank.qmd  counting-is-hard.qmd  counting-phone-calls.qmd  counting.ipynb  counting.qmd  debugging.txt  dice.py  everything-is-a-vector.md  history-of-language-models.qmd  index.qmd  learning-by-gradient-descent.qmd  makemore-1.py  makemore-2.py  makemore.py  path-to-gpt.qmd  phonecalls  phonecalls.c  red_dice.ipynb  references.bib  roman-arithmetic.clj  styles.css  theory-building.md  zotero.bib
(+197 files in other folders)
