[tool.poetry]
name = "vikasgorur-github-io"
version = "0.1.0"
description = ""
authors = ["Vikas Gorur <vikas@airbase.io>"]
readme = "README.md"
packages = [{include = "vikasgorur"}]

[tool.poetry.dependencies]
python = "3.11.10"
jupyterlab = "^4.2.0"
pandas = "^2.2.2"
marimo = "^0.7.0"
matplotlib = "^3.9.0"
gensim = "^4.3.2"
scipy = "1.10.1"
fastrand = "^1.8.0"
torch = "2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
