[project]
name = "vikasgorur-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastrand>=2.0.1",
    "jupyterlab>=4.3.0",
    "marimo>=0.9.18",
    "matplotlib>=3.9.2",
    "pandas>=2.2.3",
    "torch==2.2.2",
]
