[project]
name = "gorur.dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastrand>=2.0.1",
    "jupyterlab>=4.3.0",
    "marimo>=0.9.23",
    "matplotlib>=3.9.2",
    "pandas>=2.2.3",
    "numpy<2",
    "torch==2.5.1",
    "torchviz>=0.0.2",
    "torchview>=0.2.6",
    "keras>=3.7.0",
    "pydot>=3.0.3",
]
